--- a/MediServe/res/values/strings.xml
+++ b/MediServe/res/values/strings.xml
@@ -3,5 +3,5 @@
 
     <string name="hello">Hello World, MediServe!</string>
     <string name="app_name">MediServe</string>
-
+	<string name="bluebkgd">#0815FF</string>
 </resources>
